--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ services: docker
 before_install: pip install --upgrade --user cpp-coveralls
 install: docker build -t $TRAVIS_REPO_SLUG .
 script: docker run --rm -v $(pwd):/src:Z $TRAVIS_REPO_SLUG
-after_success: coveralls
+after_success: coveralls -e external -e tests
