--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: cpp
 services: docker
 before_install: pip install --upgrade --user cpp-coveralls
 install: docker build -t $TRAVIS_REPO_SLUG .
-script: docker run --rm -v $(pwd):/src:Z $TRAVIS_REPO_SLUG test-coverage
+script: docker run --rm -v $(pwd):/src:Z $TRAVIS_REPO_SLUG make test-coverage
