--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ before_install: pip install --upgrade --user cpp-coveralls
 install: docker build -t $TRAVIS_REPO_SLUG .
 script:
   - env | sort
-  - docker run --rm -v $(pwd):/src:Z \
-    -E COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN \
+  - docker run --rm -v $(pwd):/src:Z
+    -E COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN
     $TRAVIS_REPO_SLUG make test-coverage
