--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ install: docker build -t $TRAVIS_REPO_SLUG .
 script:
   - env | sort
   - docker run --rm -v $(pwd):/src:Z
-    -E TRAVIS_JOB_ID=$TRAVIS_JOB_ID
+    -e TRAVIS_JOB_ID=$TRAVIS_JOB_ID
     $TRAVIS_REPO_SLUG make test-coverage
