--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: cpp
 services: docker
-before_install: pip install --upgrade --user cpp-coveralls
 install: docker build -t $TRAVIS_REPO_SLUG .
-script: docker run --rm -v $(pwd):/src:Z $TRAVIS_REPO_SLUG
-after_success: coveralls -e external -e tests
+script:
+  - env | sort
+  - docker run --rm -v $(pwd):/src:Z
+    -e TRAVIS_JOB_ID=$TRAVIS_JOB_ID
+    $TRAVIS_REPO_SLUG make coveralls
