--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
             echo docker run --rm
             -e TRAVIS_JOB_ID=$CIRCLE_BUILD_NUM
             $CIRCLE_PROJECT_REPONAME make coveralls
+      - run:
+          name: Run Docker Tests
           command: |
             docker run --rm
             -e TRAVIS_JOB_ID=$CIRCLE_BUILD_NUM
