--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           name: Run Docker Tests
           command: |
             docker run --rm \
-            -e TRAVIS_JOB_ID=$CIRCLE_BUILD_NUM \
+            -e TRAVIS_JOB_ID=#$CIRCLE_BUILD_NUM \
             $CIRCLE_PROJECT_REPONAME make coveralls
 
 workflows:
