--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run:
           name: Run Docker Tests
           command: |
-            docker run --rm \
+            docker run --rm -v $(pwd)/.git:/src/.git:ro,Z
             -e TRAVIS_JOB_ID=#$CIRCLE_BUILD_NUM \
             $CIRCLE_PROJECT_REPONAME make coveralls
 
