--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: Run Docker Tests
           command: |
-            docker run --rm -v $(pwd)/.git:/src/.git:ro,Z
+            docker run --rm -v $(pwd)/.git:/src/.git:ro,Z \
             -e TRAVIS_JOB_ID=#$CIRCLE_BUILD_NUM \
             $CIRCLE_PROJECT_REPONAME make coveralls
 
