--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,15 +8,34 @@ jobs:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
+      # Enable caching on CircleCI free
+      # Source: https://circleci.com/blog/how-to-build-a-docker-image-on-circleci-2-0/
+      - restore_cache:
+          keys:
+            - v1-{{ .Branch }}
+          paths:
+            - /caches/app.tar
+      - run:
+          name: Load Docker image layer cache
+          command: docker load -i /caches/app.tar | true
       - run:
           name: Build Docker Container
-          command: docker build -t $CIRCLE_PROJECT_REPONAME .
+          command: docker build --cache-from=app -t app .
+      - run:
+          name: Save Docker image layer cache
+          command: |
+            mkdir -p /caches
+            docker save -o /caches/app.tar app
+      - save_cache:
+          key: v1-{{ .Branch }}-{{ epoch }}
+          paths:
+            - /caches/app.tar
       - run:
           name: Run Docker Tests
           command: |
             docker run --rm -v $(pwd)/.git:/src/.git:ro,Z \
             -e TRAVIS_JOB_ID=#$CIRCLE_BUILD_NUM \
-            $CIRCLE_PROJECT_REPONAME make coveralls
+            app make coveralls
 
 workflows:
   default:
