--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - run:
           name: Run Docker Tests
           command: |
-            docker run --rm -v $(pwd)/.git:/src/.git:ro,Z \
+            docker run --rm -v $(pwd)/.git:/app/.git:ro,Z \
             -e TRAVIS_JOB_ID=#$CIRCLE_BUILD_NUM \
             app make coveralls
 
