--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,28 +8,28 @@ jobs:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
-      # Enable caching on CircleCI free
-      # Source: https://circleci.com/blog/how-to-build-a-docker-image-on-circleci-2-0/
-      - restore_cache:
-          keys:
-            - v1-{{ .Branch }}
-          paths:
-            - docker-app.tar
-      - run:
-          name: Load Docker image layer cache
-          command: |
-            set +o pipefail
-            docker load -i docker-app.tar | true
+      # # Enable caching on CircleCI free
+      # # Source: https://circleci.com/blog/how-to-build-a-docker-image-on-circleci-2-0/
+      # - restore_cache:
+      #     keys:
+      #       - v1-{{ .Branch }}
+      #     paths:
+      #       - docker-app.tar
+      # - run:
+      #     name: Load Docker image layer cache
+      #     command: |
+      #       set +o pipefail
+      #       docker load -i docker-app.tar | true
       - run:
           name: Build Docker Container
           command: docker build --cache-from=app -t app .
-      - run:
-          name: Save Docker image layer cache
-          command: docker save -o docker-app.tar app
-      - save_cache:
-          key: v1-{{ .Branch }}-{{ epoch }}
-          paths:
-            - docker-app.tar
+      # - run:
+      #     name: Save Docker image layer cache
+      #     command: docker save -o docker-app.tar app
+      # - save_cache:
+      #     key: v1-{{ .Branch }}-{{ epoch }}
+      #     paths:
+      #       - docker-app.tar
       - run:
           name: Run Docker Tests
           command: |
