--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             cat $(pwd)/.git/HEAD
             docker run --rm -v $(pwd)/.git:/app/.git \
             cimg/base:stable \
-            sh -c "set +x; cd /app; ls -la .git; cat .git/HEAD"
+            sh -c "set -x; cd /app; ls -la .git; cat .git/HEAD"
       - run:
           name: Build Docker Container
           command: docker build -t app .
