Quote inline bash commands
Copied from the Docker docs.  Why does this help?

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             ls -la $(pwd)/.git
             cat $(pwd)/.git/HEAD
             docker run --rm \
-            --mount type=bind,source=$(pwd)/.git,target=/app/.git,readonly \
+            --mount type=bind,source="$(pwd)"/.git,target=/app/.git,readonly \
             cimg/base:stable \
             sh -c "set -x; cd /app; ls -la .git; cat .git/HEAD"
       - run:
