--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,9 @@ jobs:
             set -x
             ls -la $(pwd)/.git
             cat $(pwd)/.git/HEAD
+            echo `pwd`
             docker run --rm \
-            --mount type=bind,source="$(pwd)"/.git,target=/app/.git,readonly \
+            --mount type=bind,source=`pwd`/.git,target=/app/.git,readonly \
             cimg/base:stable \
             sh -c "set -x; cd /app; ls -la .git; cat .git/HEAD"
       - run:
