--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,12 @@ jobs:
             cat $(pwd)/.git/HEAD
             echo `pwd`
             docker images
+            echo $SHELL
+            bash -c " \
             docker run --rm \
-            --mount type=bind,source=`pwd`/.git,target=/app/.git,readonly \
+            --mount type=bind,source=$pwd/.git,target=/app/.git,readonly \
             cimg/base:stable \
-            sh -c "set -x; cd /app; ls -la .git; cat .git/HEAD"
+            sh -c 'set -x; cd /app; ls -la .git; cat .git/HEAD'"
       - run:
           name: Build Docker Container
           command: docker build -t app .
