--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             --name app \
             cimg/base:stable \
             sh -c 'set -x; cd /app; ls -la .git; cat .git/HEAD'
-            docker exec cp mkdir /app
+            docker exec app mkdir /app
             docker cp .git app:/app/.git
             docker start app
       - run:
