--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           name: Run Docker Tests
           command: |
             docker create --rm \
-            -e TRAVIS_JOB_ID=#$CIRCLE_BUILD_NUM \
+            -e TRAVIS_JOB_ID=$CIRCLE_BUILD_NUM \
             --name app \
             app make coveralls
             # CircleCI doesn't allow mounts/volumes on the docker runner
