--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
           command: |
             docker create --rm \
             -e TRAVIS_JOB_ID=$CIRCLE_BUILD_NUM \
+            -e COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN
             --name app \
             app make coveralls
             # CircleCI doesn't allow mounts/volumes on the docker runner
