--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,14 +14,22 @@ jobs:
       - run:
           name: Run Docker Tests
           command: |
-            docker create --rm \
+            # Create container
+            docker create \
             -e TRAVIS_JOB_ID=$CIRCLE_BUILD_NUM \
             -e COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN \
             --name app \
             app make coveralls
             # CircleCI doesn't allow mounts/volumes on the docker runner
             docker cp .git app:/app/.git
+            # Run the tests
             docker start -a app
+            # Retrieve the results
+            docker cp app:test-results.xml .
+            # Clean up
+            docker rm app
+      - store_test_results:
+          path: .
 
 workflows:
   default:
