--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2.1
+orbs:
+  codecov: codecov/codecov@3.1.1
 
 jobs:
   build:
@@ -20,8 +22,8 @@ jobs:
             -e COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN \
             --name app \
             app make coveralls
-            # CircleCI doesn't allow mounts/volumes on the docker runner
-            docker cp .git app:/app/.git
+            # # CircleCI doesn't allow mounts/volumes on the docker runner
+            # docker cp .git app:/app/.git  # disabled for testing purposes
             # Run the tests
             docker start -a app
             # Retrieve the results
@@ -30,6 +32,7 @@ jobs:
             docker rm app
       - store_test_results:
           path: .
+      - codecov/upload
 
 workflows:
   default:
