--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,8 @@ jobs:
             -e COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN \
             --name app \
             app make codecov
-            # # CircleCI doesn't allow mounts/volumes on the docker runner
-            # docker cp .git app:/app/.git  # disabled for testing purposes
+            # CircleCI doesn't allow mounts/volumes on the docker runner
+            docker cp .git app:/app/.git  # disabled for testing purposes
             # Run the tests
             docker start -a app
             # Retrieve the results
