--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,14 +14,13 @@ jobs:
       - run:
           name: Run Docker Tests
           command: |
+            # Get environment variable CodeCov might want
+            ci_env=`bash <(curl -s https://codecov.io/env)`
             # Create container
             docker create \
-            -e TRAVIS_JOB_ID=$CIRCLE_BUILD_NUM \
-            -e COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN \
+            $ci_env \
             --name app \
-            app make coveralls
-            # CircleCI doesn't allow mounts/volumes on the docker runner
-            docker cp .git app:/app/.git
+            app make codecov
             # Run the tests
             docker start -a app
             # Retrieve the results
